@@ -1,3 +1,11 @@
+2012-11-22  Patrice Dumas  <pertusus@free.fr>
+
+	* */*.pl */Makefile.am: use #! /usr/bin/env perl for shebangs in case
+	perl is not in /usr/bin.
+	Subbstitute $(PERL) in the shebang for scripts that are modified
+	using configure generated values.
+	* man/Makefile.am: remove $(srcdir) from targets.
+
 2012-11-20  Patrice Dumas  <pertusus@free.fr>
 
 	* Texinfo/Common.pm, Texinfo/Parser.pm, 
